--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stitches/react": "^0.2.0",
+    "@styled-icons/evaicons-outline": "^10.34.0",
     "bootstrap": "3.4.1",
     "history": "4.10.1",
     "next": "9.4.4",
@@ -12,6 +14,7 @@
     "react-dom": "16.11.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
+    "styled-components": "^5.3.0",
     "web3": "1.2.2"
   },
   "scripts": {
