--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.0",
     "@stitches/react": "^0.2.0",
     "@styled-icons/evaicons-outline": "^10.34.0",
     "bootstrap": "3.4.1",
@@ -12,6 +13,7 @@
     "react-bootstrap": "1.0.1",
     "react-bootstrap-table": "4.3.1",
     "react-dom": "16.11.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.3.0",
